...
            }}
          />
          <Stack.Screen
            name="pages/[id]"
            options={{
              headerShown: true,
              headerTitle: 'Page Detail',
              headerBackTitle: 'Back',
            }}
          />
          <Stack.Screen
            name="pages/edit/[id]"
            options={{
              headerShown: true,
...
